@startuml
'https://plantuml.com/class-diagram

ShootContext o-- ShootStrategy
ShootStrategy <|..  MobShoot
ShootStrategy <|..  SeperateShoot

class ShootContext
{
    - strategy:AbstractShoot
    + ShootContext(ShootStrategy strategy)
    + setStrategy(AbstractShoot strategy):void
    + executeStrategy(AbstractAircraft aircraft):List<AbstractBullet>
}

abstract class ShootStrategy
{
    + abstract way(List<AbstractBullet> bullets):List<AbstractBullet>
}

class MobShoot
{
    +Way(List<AbstractBullet> bullet):List<AbstractBullet>
}

class SeperateShoot
{
    +Way(List<AbstractBullet> bullet):List<AbstractBullet>
}
@enduml